# mpc_quadrotor

./: .gitignore  CMakeLists.txt  CMakePresets.json  Euler_mpc.cpp  Euler_mpc.hpp  Quaternion_mpc.cpp  Quaternion_mpc.hpp  README.md  euler_example.cpp  example.cpp  mpc_nlopt.cpp  mpc_quad.cpp  quad_dynamics.cpp  quaternion_example.cpp
LMPC_Full/: LMPC_Full.cpp  LMPC_Full.hpp  lmpc_full_example.cpp
LMPC_Pos/: LMPC_Pos.cpp  LMPC_Pos.hpp  lmpc_pos_example.cpp
NMPC_Euler/: NMPC_Euler.cpp  NMPC_Euler.hpp  euler_example.cpp
NMPC_Quaternion/: NMPC_Quaternion.cpp  NMPC_Quaternion.hpp  quaternion_example.cpp
